--- a/values.yaml
+++ b/values.yaml
@@ -588,6 +588,10 @@ kube-prometheus-stack:
   kubeStateMetrics:
     enabled: true
   kube-state-metrics:
+    image:
+      registry: mtr.devops.telekom.de
+      repository: kubeprometheusstack/kube-state-metrics
+      tag: v2.10.0
     rbac:
       create: true
     releaseLabel: false
@@ -607,7 +611,35 @@ kube-prometheus-stack:
     rbac:
       pspEnabled: false
   prometheusOperator:
-    enabled: true
+    admissionWebhooks:
+      patch:
+        image:
+          pullPolicy: Always
+          registry: mtr.devops.telekom.de
+          repository: kubeprometheusstack/kube-webhook-certgen
+          tag: v20221220-controller-v1.5.1-58-g787ea74b6
+        resources:
+          limits:
+            cpu: 300m
+            memory: 400Mi
+          requests:
+            cpu: 100m
+            memory: 100Mi
+        securityContext:
+          runAsGroup: 2000
+          runAsNonRoot: true
+          runAsUser: 2000
+          seccompProfile:
+            type: RuntimeDefault
+    image:
+      pullPolicy: Always
+      registry: mtr.devops.telekom.de
+      repository: kubeprometheusstack/prometheus-operator
+      tag: v0.68.0
+    prometheusConfigReloader:
+      image:
+        registry: mtr.devops.telekom.de
+        repository: kubeprometheusstack/prometheus-config-reloader
   prometheus:
     additionalRulesForClusterRole:
     - apiGroups:
