--- a/values.yaml
+++ b/values.yaml
@@ -604,6 +604,10 @@ kube-prometheus-stack:
   nodeExporter:
     enabled: true
   prometheus-node-exporter:
+    image:
+      pullPolicy: Always
+      registry: mtr.devops.telekom.de
+      repository: kubeprometheusstack/node-exporter
     prometheus:
       monitor:
         enabled: true
@@ -838,7 +842,7 @@ kube-prometheus-stack:
       volumeMounts: []
       walCompression: true
     serviceAccount:
-      create: false
+      create: true
       name: rancher-monitoring
     service:
       additionalPorts:
