--- a/Chart.yaml
+++ b/Chart.yaml
@@ -5,7 +5,7 @@ annotations:
   catalog.cattle.io/requests-memory: 1000Mi
 name: caas-cluster-monitoring
 description: A Helm chart for Rancher Cluster Monitoring V3
-version: "0.0.1"
+version: "0.0.2"
 appVersion: "51.0.3"
 icon: https://raw.githubusercontent.com/caas-team/caas-project-monitoring/main/logo.png
 keywords:
@@ -14,6 +14,9 @@ dependencies:
   - name: kube-prometheus-stack
     version: "51.0.3"
     repository: "https://prometheus-community.github.io/helm-charts"
+#  - condition: rancher.k3sServer.enabled
+#    name: k3sServer
+#    repository: file://./k3sServer
 sources:
   - https://github.com/caas-team/caas-cluster-monitoring
   - https://github.com/prometheus-community/helm-charts
