chore: added release label to state-metrics
Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/values.yaml
+++ b/values.yaml
@@ -601,7 +601,7 @@ kube-prometheus-stack:
       tag: v2.10.0
     rbac:
       create: true
-    releaseLabel: false
+    releaseLabel: true
     prometheus:
       monitor:
         enabled: true
