--- a/templates/np-prometheus-auth.yaml
+++ b/templates/np-prometheus-auth.yaml
@@ -1,14 +1,15 @@
+{{- if .Values.caas.prometheusAuth }}
+---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: allow-prometheus-auth
-  namespace: cattle-monitoring-system
 spec:
   ingress:
-  - ports:
-    - port: 9091
-      protocol: TCP
+    - ports:
+      - port: 9091
+        protocol: TCP
   podSelector: {}
   policyTypes:
-  - Ingress
-status: {}
+    - Ingress
+{{- end }}
