fix kube-state-metrics label handling

--- a/values.yaml
+++ b/values.yaml
@@ -601,13 +601,14 @@ kube-prometheus-stack:
   kubeStateMetrics:
     enabled: true
   kube-state-metrics:
+    honorLabels: true
     image:
       registry: mtr.devops.telekom.de
       repository: kubeprometheusstack/kube-state-metrics
       tag: v2.10.0
     rbac:
       create: true
-    releaseLabel: false
+    releaseLabel: true
     prometheus:
       monitor:
         enabled: true
