fix: honorLabels for kube-state-metrics
Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/values.yaml
+++ b/values.yaml
@@ -610,7 +610,7 @@ kube-prometheus-stack:
     prometheus:
       monitor:
         enabled: true
-        honorLabels: false
+        honorLabels: true
     selfMonitor:
       enabled: true
   nodeExporter:
