fix: added networkpolicy to allow all traffic in cattle-monitoring-system
Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/templates/np-default-allow-all.yaml
+++ b/templates/np-default-allow-all.yaml
@@ -3,11 +3,12 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-all-egress
+  name: allow-all
 spec:
   egress:
     - {}
   podSelector: {}
   policyTypes:
     - Egress
+    - Ingres
 {{- end }}
