refactor: move np values to own field
Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/templates/np-default-allow-all.yaml
+++ b/templates/np-default-allow-all.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.caas.allowEgress }}
+{{- if .Values.caas.networkPolicies.allowAllTraffic }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
