--- a/templates/np-dynakube.yaml
+++ b/templates/np-dynakube.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.caas.dynatrace }}
+{{- if .Values.caas.networkPolicies.dynatrace }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
