--- a/templates/np-dynakube.yaml
+++ b/templates/np-dynakube.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.caas.networkPolicies.dynatrace }}
+{{- if and .Values.caas.networkPolicies.dynatrace (not .Values.caas.networkPolicies.allowAllTraffic) }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
