--- a/templates/np-kubecost.yaml
+++ b/templates/np-kubecost.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.caas.networkPolicies.clusterCosts }}
+{{- if and .Values.caas.networkPolicies.clusterCosts (not .Values.caas.networkPolicies.allowAllTraffic) }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
