--- a/templates/np-prometheus-auth.yaml
+++ b/templates/np-prometheus-auth.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.caas.networkPolicies.prometheusAuth }}
+{{- if and .Values.caas.networkPolicies.prometheusAuth (not .Values.caas.networkPolicies.allowAllTraffic) }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
