--- a/Chart.yaml
+++ b/Chart.yaml
@@ -5,7 +5,7 @@ annotations:
   catalog.cattle.io/requests-memory: 1000Mi
 name: caas-cluster-monitoring
 description: A Helm chart for Rancher Cluster Monitoring V3
-version: "0.0.9"
+version: "0.0.10"
 appVersion: "58.4.0"
 icon: https://raw.githubusercontent.com/caas-team/caas-project-monitoring/main/logo.png
 keywords:
@@ -36,7 +36,7 @@ dependencies:
   version: 0.1.6
 - condition: hardenedKubelet.enabled
   name: hardenedKubelet
-  repository: file//.charts/hardenedKubelet
+  repository: file://./charts/hardenedKubelet
   version: 0.2.0
 sources:
 - https://github.com/caas-team/caas-cluster-monitoring
