--- a/values.yaml
+++ b/values.yaml
@@ -35,9 +35,9 @@ global:
   imageRegistry: mtr.devops.telekom.de
 
 kube-prometheus-stack:
-  #  full set of values and pre-defined for caas
-  #  ref: https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-prometheus-stack/values.yaml
-  ## Provide custom recording or alerting rules to be deployed into the cluster.
+  ## -- Provide custom recording or alerting rules to be deployed into the cluster.
+  #  -- Full set of values and pre-defined for caas
+  #  -- ref: https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-prometheus-stack/values.yaml
   ##
   alertmanager:
     alertmanagerSpec:
@@ -151,11 +151,8 @@ kube-prometheus-stack:
     enabled: true
   crds:
     enabled: false
-  #commonLabels:
-  #  field.cattle.io/projectId: *projectId
 
-  ## Create default rules for monitoring the cluster
-  ##
+  ## -- Default rules for monitoring the cluster
   defaultRules:
     appNamespacesTarget: ".*"
     create: true
@@ -277,7 +274,7 @@ kube-prometheus-stack:
       log:
         level: info
       security:
-        # Required to embed dashboards in Rancher Cluster Overview Dashboard on Cluster Explorer
+        # -- Required to embed dashboards in Rancher Cluster Overview Dashboard on Cluster Explorer
         allow_embedding: true
       users:
         auto_assign_org_role: Viewer
@@ -671,9 +668,9 @@ kube-prometheus-stack:
         repository: kubeprometheusstack/prometheus-config-reloader
   thanosRuler:
     enabled: false
+
 # refer to Rancher specific things,holding as sub charts in https://github.com/rancher/charts/tree/release-v2.7/charts/rancher-monitoring/102.0.2%2Bup40.1.2/charts
 # try to adapt from kps components, or copy the sub chart content here
-
 rkeControllerManager:
   clients:
     https:
