--- a/.helmignore
+++ b/.helmignore
@@ -1,5 +1,10 @@
 .pre-commit-config.yaml
+rke*.tgz
 .github/*
 README.md*
+
 # needed else the whole git directory is packed in the chart
 .git
+
+# ignore self if present in directory
+caas-cluster-mononitoring*.tgz
