--- a/charts/rkeEtcd/values.yaml
+++ b/charts/rkeEtcd/values.yaml
@@ -75,9 +75,29 @@ clients:
   https:
     # Does the client require https to access the metrics?
     enabled: false
+    # Does the client require requests be sent to http or https?
+    forceHTTPSScheme: false
     # If set to true, the client will create a service account with adequate permissions and set a flag
     # on the client to use the service account token provided by it to make authorized scrape requests
     useServiceAccountCredentials: false
+    # Configuration for authentication to metrics via https endpoint
+    authenticationMethod:
+      # Reads token from defined file in container
+      # This function is deprecated in the prometheus operator api and may be removed in a future version
+      bearerTokenFile:
+        enabled: false
+        bearerTokenFilePath: "/var/run/secrets/kubernetes.io/serviceaccount/token"
+      # Reads token from defined secret in namespace
+      # This function is deprecated in the prometheus operator api and may be removed in a future version
+      bearerTokenSecret:
+        enabled: false
+      # Reads token from defined secret in namespace
+      authorization:
+        enabled: false
+        type: "bearer"
+        credentials:
+          key: "token"
+          optional: false
     # If set to true, the client will disable SSL security checks
     insecureSkipVerify: false
     # Directory on host where necessary TLS cert and key to scrape metrics can be found
@@ -110,7 +130,7 @@ clients:
 
   image:
     repository: rancher/pushprox-client
-    tag: v0.1.0-rancher2-client
+    tag: v0.1.3-rancher2-client
   command: ["pushprox-client"]
 
   copyCertsImage:
@@ -142,5 +162,5 @@ proxy:
 
   image:
     repository: rancher/pushprox-proxy
-    tag: v0.1.0-rancher2-proxy
+    tag: v0.1.3-rancher2-proxy
   command: ["pushprox-proxy"]
