--- a/charts/rkeIngressNginx/templates/pushprox-clients-rbac.yaml
+++ b/charts/rkeIngressNginx/templates/pushprox-clients-rbac.yaml
@@ -42,6 +42,18 @@ metadata:
   namespace: {{ include "pushprox.namespace" . }}
   labels: {{ include "pushProxy.client.labels" . | nindent 4 }}
 ---
+{{- if .Values.clients.https.useServiceAccountCredentials }}
+apiVersion: v1
+kind: Secret
+type: kubernetes.io/service-account-token
+metadata:
+  name: {{ template "pushProxy.client.serviceAccountTokenName" . }}
+  namespace: {{ include "pushprox.namespace" . }}
+  labels: {{ include "pushProxy.client.labels" . | nindent 4 }}
+  annotations:
+    kubernetes.io/service-account.name: {{ template "pushProxy.client.name" . }}
+{{- end }}
+---
 {{- if .Values.global.cattle.psp.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
