--- a/values.yaml
+++ b/values.yaml
@@ -830,15 +830,30 @@ hardenedKubelet:
       relabelings:
       - sourceLabels: [__metrics_path__]
         targetLabel: metrics_path
+      metricRelabelings:
+      - action: keep
+        regex: 'up|go_goroutines|storage_operation_(duration_seconds_bucket|duration_seconds_count)|rest_client_(request_duration_seconds_bucket|requests_total)|workqueue_(queue_duration_seconds_bucket|depth|adds_total)|process_(start_time_seconds|cpu_seconds_total|resident_memory_bytes)|kubelet_pod_(worker_duration_seconds_bucket|start_duration_seconds_bucket|worker_duration_seconds_count|start_duration_seconds_count)|kubelet_cgroup_manager_(duration_seconds_bucket|duration_seconds_count)|kubelet_runtime_operations_(duration_seconds_bucket|total|errors_total)|kubelet_volume_stats_(inodes_used|inodes|available_bytes|capacity_bytes)|kubelet_pleg_relist_(duration_seconds_bucket|interval_seconds_bucket|duration_seconds_count)|kubelet_running_(containers|pods)|kubelet_node_name|volume_manager_total_volumes'
+        sourceLabels:
+        - __name__
     - port: metrics
       path: /metrics/cadvisor
       honorLabels: true
       relabelings:
       - sourceLabels: [__metrics_path__]
         targetLabel: metrics_path
+      metricRelabelings:
+      - action: keep
+        regex: 'up|container_network_(transmit_bytes_total|transmit_bytes_total|receive_errors_total|receive_packets_dropped_total|receive_bytes_total|receive_packets_total|transmit_packets_dropped_total|transmit_packets_total|transmit_errors_total)|container_memory_(cache|rss|working_set_bytes)|container_fs_(reads_total|writes_total|reads_bytes_total|writes_bytes_total)|container_cpu_(usage_seconds_total|cfs_periods_total|cfs_throttled_periods_total)|node_namespace_pod_container:(container_memory_working_set_bytes|container_memory_cache|container_memory_rss)'
+        sourceLabels:
+        - __name__
     - port: metrics
       path: /metrics/probes
       honorLabels: true
       relabelings:
       - sourceLabels: [__metrics_path__]
         targetLabel: metrics_path
+      metricRelabelings:
+      - action: keep
+        regex: process_(start_time_seconds|cpu_seconds_total|resident_memory_bytes)
+        sourceLabels:
+        - __name__
