--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,11 +1,9 @@
 apiVersion: v2
 annotations:
   catalog.cattle.io/display-name: CaaS Cluster Monitoring V3
-  catalog.cattle.io/requests-cpu: 1000m
-  catalog.cattle.io/requests-memory: 1000Mi
 name: caas-cluster-monitoring
 description: A Helm chart for Rancher Cluster Monitoring V3
-version: "0.0.11"
+version: "0.0.11-rc4"
 appVersion: "58.4.0"
 icon: https://raw.githubusercontent.com/caas-team/caas-project-monitoring/main/logo.png
 keywords:
