--- a/values.yaml
+++ b/values.yaml
@@ -726,6 +726,15 @@ rkeEtcd:
       operator: "Exists"
     - effect: "NoSchedule"
       operator: "Exists"
+  serviceMonitor:
+    endpoints:
+    - port: metrics
+      honorLabels: true
+      metricRelabelings:
+      - action: keep
+        regex: 'grpc_server_(handled_total|started_total)|up|process_(start_time_seconds|cpu_seconds_total|resident_memory_bytes)|go_goroutines|etcd_disk_(backend_commit_duration_seconds_bucket|wal_fsync_duration_seconds_bucket)|etcd_server_(pending|failed_total|applied_total|committed_total)|etcd_network_client_grpc_(sent_bytes_total|received_bytes_total)|etcd_mvcc_db_total_size_in_bytes'
+        sourceLabels:
+        - __name__
 
 rkeIngressNginx:
   enabled: false
