--- a/values.yaml
+++ b/values.yaml
@@ -730,6 +730,9 @@ rkeEtcd:
     endpoints:
     - port: metrics
       honorLabels: true
+      # -- Relabeling to keep only the needed metrics
+      # -- for the grafana dashboards. If additional metrics
+      # -- are needed, they should be added to this regex.
       metricRelabelings:
       - action: keep
         regex: 'grpc_server_(handled_total|started_total)|up|process_(start_time_seconds|cpu_seconds_total|resident_memory_bytes)|go_goroutines|etcd_disk_(backend_commit_duration_seconds_bucket|wal_fsync_duration_seconds_bucket)|etcd_server_proposals_(pending|failed_total|applied_total|committed_total)|etcd_network_client_grpc_(sent_bytes_total|received_bytes_total)|etcd_mvcc_db_total_size_in_bytes'
