--- a/Chart.yaml
+++ b/Chart.yaml
@@ -3,46 +3,46 @@ annotations:
   catalog.cattle.io/display-name: CaaS Cluster Monitoring V3
 name: caas-cluster-monitoring
 description: A Helm chart for Rancher Cluster Monitoring V3
-version: "0.0.11"
+version: "0.0.12-rc0"
 appVersion: "58.4.0"
 icon: https://raw.githubusercontent.com/caas-team/caas-project-monitoring/main/logo.png
 keywords:
-- monitoring
+  - monitoring
 dependencies:
-- name: kube-prometheus-stack
-  version: "58.4.0"
-  repository: "https://prometheus-community.github.io/helm-charts"
-- condition: rkeEtcd.enabled
-  name: rkeEtcd
-  version: 0.2.1
-  repository: file://./charts/rkeEtcd
-- condition: rkeControllerManager.enabled
-  name: rkeControllerManager
-  repository: file://./charts/rkeControllerManager
-  version: 0.2.1
-- condition: rkeScheduler.enabled
-  name: rkeScheduler
-  repository: file://./charts/rkeScheduler
-  version: 0.2.1
-- condition: rkeIngressNginx.enabled
-  name: rkeIngressNginx
-  repository: file://./charts/rkeIngressNginx
-  version: 0.2.1
-- condition: rkeProxy.enabled
-  name: rkeProxy
-  repository: file://./charts/rkeProxy
-  version: 0.2.1
-- condition: hardenedKubelet.enabled
-  name: hardenedKubelet
-  repository: file://./charts/hardenedKubelet
-  version: 0.2.1
+  - name: kube-prometheus-stack
+    version: "58.4.0"
+    repository: "https://prometheus-community.github.io/helm-charts"
+  - condition: rkeEtcd.enabled
+    name: rkeEtcd
+    version: 0.2.1
+    repository: file://./charts/rkeEtcd
+  - condition: rkeControllerManager.enabled
+    name: rkeControllerManager
+    repository: file://./charts/rkeControllerManager
+    version: 0.2.1
+  - condition: rkeScheduler.enabled
+    name: rkeScheduler
+    repository: file://./charts/rkeScheduler
+    version: 0.2.1
+  - condition: rkeIngressNginx.enabled
+    name: rkeIngressNginx
+    repository: file://./charts/rkeIngressNginx
+    version: 0.2.1
+  - condition: rkeProxy.enabled
+    name: rkeProxy
+    repository: file://./charts/rkeProxy
+    version: 0.2.1
+  - condition: hardenedKubelet.enabled
+    name: hardenedKubelet
+    repository: file://./charts/hardenedKubelet
+    version: 0.2.1
 sources:
-- https://github.com/caas-team/caas-cluster-monitoring
-- https://github.com/prometheus-community/helm-charts
+  - https://github.com/caas-team/caas-cluster-monitoring
+  - https://github.com/prometheus-community/helm-charts
 maintainers:
-- name: eumel8
-  email: f.kloeker@telekom.de
-  url: https://www.telekom.com
-- name: puffitos
-  email: bruno.bressi@telekom.de
-  url: https://www.telekom.com
+  - name: eumel8
+    email: f.kloeker@telekom.de
+    url: https://www.telekom.com
+  - name: puffitos
+    email: bruno.bressi@telekom.de
+    url: https://www.telekom.com
