fix: grafana label for self monitoring added
The grafana metrics were not being scraped because of the missing label

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/values.yaml
+++ b/values.yaml
@@ -310,9 +310,12 @@ kube-prometheus-stack:
     serviceMonitor:
       enabled: true
       interval: "30s"
+      labels:
+        release: rancher-monitoring
       path: "/metrics"
       scheme: http
       scrapeTimeout: 30s
+
     sidecar:
       dashboards:
         annotations: {}
