--- a/values.yaml
+++ b/values.yaml
@@ -150,6 +150,9 @@ kube-prometheus-stack:
   coreDns:
     enabled: true
 
+  commonLabels:
+    release: rancher-monitoring
+
   ## -- Default rules for monitoring the cluster
   defaultRules:
     appNamespacesTarget: ".*"
