fix: removed unexpected token
Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/files/rancher/k8s/rancher-k8s-components.json
+++ b/files/rancher/k8s/rancher-k8s-components.json
@@ -202,7 +202,7 @@
             "uid": "$datasource"
           },
           "editorMode": "code",
-          "expr": "sum(workqueue_depth{component=\"kube-controller-manager\", name=\"deployment\"}f) by (name)",
+          "expr": "sum(workqueue_depth{component=\"kube-controller-manager\", name=\"deployment\"}) by (name)",
           "interval": "",
           "legendFormat": "Deployment Depth",
           "range": true,
