--- a/values.yaml
+++ b/values.yaml
@@ -10,10 +10,6 @@ caas:
   # -- whether the cluster has a dynatrace operator installed
   dynatrace: true
   fullnameOverride: ""
-  # deploy additional nginx.conf and dashboard for Grafana, mostly covered from Rancher
-  # beware of the defaultDashboardsEnabled in kube-prometheus-stack
-  grafana:
-    configmaps: false
   nameOverride: ""
   # -- overrides the default namespace for caas related resources
   namespaceOverride: ""
@@ -25,7 +21,24 @@ caas:
     serviceAccount:
       create: true
       name: rancher-monitoring
-
+  grafana:
+    dashboards:
+      # -- whether to deploy the nginx ingress controller dashboard
+      nginxIngress: true
+      # -- whether to deploy the rancher cluster dashboards
+      rancherCluster: true
+      # -- whether to deploy the rancher home dashboard
+      rancherHome: true
+      # -- whether to deploy the rancher k8s components dashboard
+      rancherK8sComponents: true
+      # -- whether to deploy the rancher nodes dashboard
+      rancherNodes: true
+      # -- whether to deploy the rancher performance dashboard
+      rancherPerformance: true
+      # -- whether to deploy the rancher pods dashboard
+      rancherPods: true
+      # -- whether to deploy the rancher workloads dashboard
+      rancherWorkloads: true
 global:
   cattle:
     clusterId: local
