--- a/Chart.yaml
+++ b/Chart.yaml
@@ -3,14 +3,14 @@ annotations:
   catalog.cattle.io/display-name: CaaS Cluster Monitoring V3
 name: caas-cluster-monitoring
 description: A Helm chart for Rancher Cluster Monitoring V3
-version: "0.0.14"
-appVersion: "58.4.0"
+version: "1.0.0-rc0"
+appVersion: "68.1.0"
 icon: https://raw.githubusercontent.com/caas-team/caas-project-monitoring/main/logo.png
 keywords:
 - monitoring
 dependencies:
 - name: kube-prometheus-stack
-  version: "58.4.0"
+  version: "68.1.0"
   repository: "https://prometheus-community.github.io/helm-charts"
 - condition: rkeEtcd.enabled
   name: rkeEtcd
