chore: use release name instead of hardcoded value

--- a/templates/np-dynakube.yaml
+++ b/templates/np-dynakube.yaml
@@ -13,7 +13,7 @@ spec:
             field.cattle.io/projectId: dynatrace
   podSelector:
     matchLabels:
-      release: rancher-monitoring
+      release: {{ .Release.Name }}
   policyTypes:
     - Ingress
 {{- end }}
