chore: deactivate rancher performance dasbhoard
Not needed for the most downstream clusters

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/values.yaml
+++ b/values.yaml
@@ -39,7 +39,7 @@ caas:
       # -- whether to deploy the rancher nodes dashboard
       rancherNodes: true
       # -- whether to deploy the rancher performance dashboard
-      rancherPerformance: true
+      rancherPerformance: false
       # -- whether to deploy the rancher pods dashboard
       rancherPods: true
       # -- whether to deploy the rancher workloads dashboard
