fix: added label to smon for rancher
The service monitor was not being picked up

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/templates/exporters/rancher-monitoring.yaml
+++ b/templates/exporters/rancher-monitoring.yaml
@@ -4,6 +4,8 @@ kind: ServiceMonitor
 metadata:
   name: rancher
   namespace: cattle-system
+  labels:
+    release: {{ .Release.Name }}
 spec:
   endpoints:
   - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
@@ -24,7 +26,7 @@ spec:
         replacement: {{ .Values.global.cattle.clusterName }}
     {{- end }}
   jobLabel: rancher
-  selector: 
+  selector:
     matchLabels:
       app: rancher
 ---
