feat: added default egress and microservices egress
This will allow the prometheus to scrape the standard ports which are
exposed from the various standard components rolled out with the chart,
like kube-state-metrics and so on. Additionally, this commit adds the
option to also scrape the caas microservices.

--- a/values.yaml
+++ b/values.yaml
@@ -5,6 +5,11 @@
 caas:
   # -- whether a kubecost ingress policy for kube-state-metrics is needed
   clusterCosts: true
+  # -- whether the default hardened egress policy is needed
+  # -- to allow scraping of only the standard k8s components
+  defaultInternalEgress: true
+  # -- whether egress to the microservices namespace is needed
+  egressMicroservices: false
   # -- whether the cluster needs defaultEgress installed
   defaultEgress: false
   # -- whether a dynatrace ingress policy for kube-state-metrics is needed
